# everything-claude-code

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .markdownlintignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLAWDBOT.md  COMMANDS-QUICK-REF.md  CONTRIBUTING.md  Claude.md  FLUTTER-TOOLKIT.md  INTEGRATION.md  MYREADME.md  Makefile  NIGHT_SHIFT.md  PR-RESOLUTION-SUMMARY.md  README.md  README.zh-CN.md  README_ja.md  RESEARCH.md  RULES.md  SECURITY.md  SOUL.md  SPONSORING.md  SPONSORS.md  SYMLINK_SETUP.md  SYNC-README.md  USAGE-GUIDE.md  USAGE.md  WORKING-CONTEXT.md  agent.yaml  agents_ja.md  clawdbot.plugin.json  commands_ja.md  contexts_ja.md  ecc_dashboard.py  (+28 more)
projects/ai-pipeline-repair/: .gitignore  .gitlab-ci-repair.yml  bitbucket-pipelines-repair.yml  config.yaml  pyproject.toml  requirements.txt
projects/ai-pipeline-repair/.github/workflows/: ai-repair.yml
projects/ai-pipeline-repair/src/: __init__.py  agent.py  config.py  main.py  models.py
projects/ai-pipeline-repair/src/ai/: base.py  claude_client.py  factory.py
projects/ai-pipeline-repair/src/handlers/: base.py  coverage_handler.py  factory.py  lint_handler.py  test_handler.py  validation_handler.py
projects/ai-pipeline-repair/src/parser/: log_parser.py
projects/ai-pipeline-repair/src/providers/: base.py  bitbucket_provider.py  factory.py  github_provider.py  gitlab_provider.py
projects/ai-pipeline-repair/src/utils/: git.py  logger.py
projects/ai-pipeline-repair/tests/: test_config.py  test_handlers.py  test_log_parser.py  test_models.py  test_providers.py
(+1906 files in other folders)
